--- a/app/views/external-sign-in.html
+++ b/app/views/external-sign-in.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="What type of organisation do you work for?" %}
+{% set pageName="Access the DfE Sign-in service" %}
 
 {% block beforeContent %}
 
@@ -15,43 +15,39 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <form novalidate method="post">
 
-      {{ govukRadios({
-        name: "new[organisationType]",
-        fieldset: {
-          legend: {
-            text: pageName,
-            isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
-          }
-        },
-        value: data.new.organisationType,
-        items: [
-          {
-            value: "A learning provider (a school, academy, college or further education provider)",
-            text: "A learning provider (a school, academy, college or further education provider)"
-          },
-          {
-            value: "A responsible body (academy trust, mayoral combined authority or local authority)",
-            text: "A responsible body (academy trust, mayoral combined authority or local authority)"
-          },
-           {
-            value: " Department for Education partner organisation (another government department or agency like the Cabinet Office)",
-            text: " Department for Education partner organisation (another government department or agency like the Cabinet Office)"
-          },
-           {
-            value: "The Department for Education",
-            text: "The Department for Education"
-          }
-        ]
-      }) }}
+    <h1 class="govuk-heading-l">{{pageName}}</h1>
+     {{ govukInput({
+      label: {
+        text: "Log into your account"
+      },
+      hint: {
+        text: "Enter your email address to sign in"
+      },
+      classes: "govuk-!-width-two-thirds",
+      id: "two-thirds",
+      name: "twoThirds"
+    }) }}
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+    {{ govukButton({
+      text: "Next",
+      href: "/vyed"
+    }) }}
 
-    </form> 
+    <p>By signing in, you accept <a href="">DfE Sign-in terms and conditions</a>.</p>
+
+    <h1 class="govuk-heading-m">New users of DfE Sign-in</h1>
+
+    {{ govukButton({
+      text: "Create an account",
+      classes: "govuk-button--secondary"
+    }) }}
+
+    {{ govukDetails({
+  summaryText: "Services using DfE Sign-in",
+  text: "Extra detail"
+}) }}
+    
   </div>
 </div>
 
