--- a/app/views/internal-sign-in.html
+++ b/app/views/internal-sign-in.html
@@ -21,7 +21,7 @@
 
     {{ govukButton({
       text: "Continue",
-      href: "/vyed"
+      href: "/as-is/current-content"
     }) }}
   </div>
 </div>
